# Adhesion-Approximation

./: .TODO.md.swp  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  Adhesion_Approximation.mk  CMakeLists.txt  INPUT.cfg  LICENSE.txt  Makefile  Makefile_old  README.md  TODO.md  _formulas.tex  adh_app.exe.stackdump  adhesion_8cpp.html  adhesion_8cpp.js  adhesion_8cpp__incl.map  adhesion_8cpp__incl.md5  adhesion_8cpp_source.html  adhesion_8hpp.html  adhesion_8hpp__dep__incl.map  adhesion_8hpp__dep__incl.md5  adhesion_8hpp__incl.map  adhesion_8hpp__incl.md5  adhesion_8hpp_source.html  angpow__benchmarks_8c.html  angpow__benchmarks_8c.js  angpow__benchmarks_8c__incl.map  angpow__benchmarks_8c__incl.md5  angpow__benchmarks_8c_source.html  annotated.html  annotated_dup.js  app__var_8cpp.html  app__var_8cpp.js  app__var_8cpp__dep__incl.map  app__var_8cpp__dep__incl.md5  app__var_8cpp__incl.map  app__var_8cpp__incl.md5  app__var_8cpp_source.html  (+2825 more)
doc/: Doxyfile
gnuplot_scripts/: corr.plt  run_1.plt  run_1_aa.plt  run_1_trunc.plt  run_datastar.plt  test.plt  test_FF.plt
gnuplot_scripts/FF/: all.plt  dens_map.plt  diff.plt  pos.plt  pwr+diff.plt  pwr.plt
gnuplot_scripts/ZA/: ZA_db_0.4.plt  ZA_k_vs_ZA_q.plt  ZA_vs_AA.plt
include/: CBRNG_Random.h  adhesion_approximation.h  app_var.hpp  approximations.h  approximations.hpp  chameleon.hpp  cmd_line.h  constants.hpp  core.h  core.hpp  core_app.h  core_cmd.h  core_mesh.h  core_out.h  core_power.h  emu.h  examples.cpp  frozen_flow.h  frozen_potential.h  grid_fce.h  integration.hpp  mesh.h  mesh.hpp  mod_frozen_pot.h  mod_frozen_potential.h  output.h  params.h  params.hpp  precision.hpp  stdafx.h  vec_3d.hpp  zeldovich.h
include/ApproximationsSchemes/: adhesion.hpp  chameleon.hpp  frozen_flow.hpp  frozen_potential.hpp  mod_frozen_potential.hpp  zeldovich.hpp
include/MultiGridSolver/: grid.h  multigrid.h  multigrid_solver.h
include/Random123/features/: gccfeatures.h
include/templates/: class_data_vec.hpp  class_mesh.hpp  class_particles.hpp  class_vec_3d.hpp
output/old/ZA/: RUN_INFO.txt
output/old/run_large/: RUN_INFO.txt
output/old/w_k_corr_wrong/: RUN_INFO
pynotebooks/: All_paper_plots.ipynb  fastsim_database.ipynb  poster_results.ipynb  show_results.ipynb
pynotebooks/.ipynb_checkpoints/: Pk_correlation_A_z-checkpoint.ipynb  analytic_prediction-checkpoint.ipynb  poster_results-checkpoint.ipynb  sphere-checkpoint.ipynb
pynotebooks/chi_ntbs/: analytic_prediction.ipynb  sphere.ipynb
pynotebooks/old/: short_range_test.ipynb
python/: __init__.py  data.py  plot.py
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+140 more)
simpy/: __init__.py  data.py  database.py  make_qsub.py  plot.py  power.py  results.py  stacking.py  struct.py  utils.py
src/: CBRNG_Random.cpp  adhesion_approximation.cpp  app_var.cpp  approximations.cpp  approximations.d  chameleon.cpp  cmd_line.cpp  cmd_line.d  core.cpp  core_app.cpp  core_cmd.cpp  core_mesh.cpp  core_out.cpp  core_power.cpp  emu.cpp  examples.cpp  frozen_flow.cpp  frozen_potential.cpp  grid_fce.cpp  grid_fce.d  integration.cpp  main.cpp  main.d  mesh.cpp  mod_frozen_pot.cpp  mod_frozen_potential.cpp  output.cpp  output.d  output.h  params.cpp  random.cxx  stdafx.h  tests.h  unity_build.cpp  zeldovich.cpp
src/3party/: CMakeLists.txt
src/3party/CBRNG/: CMakeLists.txt
src/3party/CBRNG/Random123/conventional/: Engine.hpp
src/3party/Catch/: CMakeLists.txt  LICENSE.txt  README.md
src/3party/JSON/: CMakeLists.txt  LICENSE.MIT  README.md
src/ApproximationsSchemes/: CMakeLists.txt  adhesion.cpp  app_var.cpp  chameleon.cpp  frozen_flow.cpp  frozen_potential.cpp  mod_frozen_potential.cpp  zeldovich.cpp
src/ApproximationsSchemes/include/: adhesion.hpp  app_var.hpp  chameleon.hpp  frozen_flow.hpp  frozen_potential.hpp  mod_frozen_potential.hpp  zeldovich.hpp
src/ApproximationsSchemes/tests/: test_app_var.cpp
src/MultiGridSolver/: grid.cpp  multigrid.cpp  multigrid_solver.cpp
src/core/: CMakeLists.txt  core_app.cpp  core_mesh.cpp  core_power.cpp  integration.cpp
src/core/include/: core_app.h  core_mesh.h  core_power.h  integration.hpp
src/core/tests/: test_core_mesh.cpp  test_core_power.cpp
src/data/: CMakeLists.txt  params.cpp
src/data/include/: class_data_vec.hpp  class_mesh.hpp  class_particles.hpp  class_vec_3d.hpp  params.hpp
src/data/tests/: test_mesh.cpp  test_particles.cpp  test_vec_3d.cpp
src/io/: CMakeLists.txt  core_cmd.cpp  core_out.cpp
src/io/include/: core_cmd.h  core_out.h
src/main/: CMakeLists.txt  main.cpp  test_main.cpp
src/main/include/: config.h.in  stdafx.h  test.hpp
swig/: CMakeLists.txt  all.i  ccl.i  core.i  emu.i  power.i  swig.i
tests/: README.md  test.hpp  test_app_var.cpp  test_chameleon.cpp  test_core.cpp  test_core_mesh.cpp  test_core_power.cpp  test_cosmology.cpp  test_main.cpp  test_mesh.cpp  test_particles.cpp  test_power.cpp  test_pp_force.cpp  test_vec_3d.cpp
tests/ApproximationsSchemes/: test_chameleon.cpp  test_mod_frozen_potential.cpp
